--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.13"
 dependencies = [
     "aiogram>=3.20.0.post0",
     "asyncpg>=0.30.0",
+    "dotenv>=0.9.9",
     "sqlalchemy>=2.0.41",
 ]
